# evolution

./: LICENCE  README.md  main.py  pyproject.toml  tox.ini
app/classes/: entities.py
app/config/: colour.py  config.py
app/functions/: common.py
